--- a/src/main/resources/templates/src/components/1.atoms/Logo/Logo.css
+++ b/src/main/resources/templates/src/components/1.atoms/Logo/Logo.css
@@ -1,7 +1,8 @@
 .logo-icon--small {
-    padding : 10px;
-    height: 40px;
+    padding: 10px;
+    height: 60px;
     pointer-events: none;
+    cursor: pointer;
 }
 
 .logo-icon--regular {
