--- a/src/main/resources/templates/src/index.css
+++ b/src/main/resources/templates/src/index.css
@@ -57,3 +57,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   monospace;
 }
+
+
+.ReactModal__Body--open{
+    overflow: hidden;
+}
